tests/specs/ecosystem/lambdalisue/streamtools/1_0_0.test
lambdalisue/streamtools/1.0.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'PipeOptions'.
export function collect<T>(stream: ReadableStream<T>, options?: PipeOptions): Promise<T[]> {
                                                                ~~~~~~~~~~~
    at file://<tmpdir>/collect.ts:28:65

TS2304 [ERROR]: Cannot find name 'PipeOptions'.
export function provide<T>(stream: WritableStream<T>, values: T[], options?: PipeOptions): Promise<void> {
                                                                             ~~~~~~~~~~~
    at file://<tmpdir>/provide.ts:29:78

TS2304 [ERROR]: Cannot find name 'PipeOptions'.
export function readAll(stream: ReadableStream<Uint8Array>, options?: PipeOptions): Promise<Uint8Array> {
                                                                      ~~~~~~~~~~~
    at file://<tmpdir>/read_all.ts:28:71

TS2304 [ERROR]: Cannot find name 'PipeOptions'.
export type WriteAllOptions = PipeOptions & {
                              ~~~~~~~~~~~
    at file://<tmpdir>/write_all.ts:1:31

Found 4 errors.

error: Type checking failed.

